--- a/index.html
+++ b/index.html
@@ -118,93 +118,126 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+    
+            </div>
     </main>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
+    <footer class="footer mt-auto py-3 bg-body-tertiary">
+        <div class="container">
+            <div class="grid row">
+                <div class="col-md-3">
+                  <h3>เกี่ยวกับเรา</h3>
+                  <p>ชลบุรี เมืองแห่งทะเลและวัฒนธรรมใกล้กรุงเทพฯ ที่ทำให้เบื่อจากเมืองกรุงมาพักผ่อนในระยะเวลาอันแสนสุข</p>
                 </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
+                <div class="col-md-3">
+                  <h3>ลิงก์ด่วน</h3>
+                  <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">Tourist attraction</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                  </ul>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
+                <div class="col-md-3">
+                  <h3>ติดต่อ</h3>
+                  <ul>
+                    <li>อีเมล: 66160113@gmail.com</li>
+                    <li>โทร: 0800463117</li>
+                  </ul>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
+                <div class="col-md-3">
+                  <h3>ติดตามเรา</h3>
+                  <div class="socials">
+                    <a href="#">Twitter</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagram</a>
+                  </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
+              </div>
         </div>
+      </footer>
 </body>
 
 </html>
