--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Mitr:wght@200;300;400;500;600;700&family=Noto+Sans+Thai:wght@100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -43,34 +46,34 @@
     </header>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label">ชื่อ-นามสกุล:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="mb-3">
-                  <label for="email" class="col-form-label">อีเมล:</label>
-                  <input type="email" class="form-control" id="email">
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label">ชื่อ-นามสกุล:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="col-form-label">อีเมล:</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="tel" class="col-form-label">เบอร์โทร:</label>
+                            <input type="tel" class="form-control" id="tel">
+                        </div>
+                    </form>
                 </div>
-                <div class="mb-3">
-                    <label for="tel" class="col-form-label">เบอร์โทร:</label>
-                    <input type="tel" class="form-control" id="tel">
-                  </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Send message</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Send message</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
     <main>
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
@@ -124,26 +127,19 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
                 </div>
-    
+
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                                the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;">
-                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
@@ -152,7 +148,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
@@ -161,7 +158,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
@@ -170,7 +168,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
@@ -179,7 +178,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
@@ -188,7 +188,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
@@ -197,47 +198,59 @@
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                         </div>
                     </div>
                 </div>
-    
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
     </main>
     <footer class="footer mt-auto py-3 bg-body-tertiary">
         <div class="container">
             <div class="grid row">
                 <div class="col-md-3">
-                  <h3>เกี่ยวกับเรา</h3>
-                  <p>ชลบุรี เมืองแห่งทะเลและวัฒนธรรมใกล้กรุงเทพฯ ที่ทำให้เบื่อจากเมืองกรุงมาพักผ่อนในระยะเวลาอันแสนสุข</p>
+                    <h3>เกี่ยวกับเรา</h3>
+                    <p>ชลบุรี เมืองแห่งทะเลและวัฒนธรรมใกล้กรุงเทพฯ ที่ทำให้เบื่อจากเมืองกรุงมาพักผ่อนในระยะเวลาอันแสนสุข
+                    </p>
                 </div>
                 <div class="col-md-3">
-                  <h3>ลิงก์ด่วน</h3>
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">Tourist attraction</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
+                    <h3>ลิงก์ด่วน</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">Tourist attraction</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
                 </div>
                 <div class="col-md-3">
-                  <h3>ติดต่อ</h3>
-                  <ul>
-                    <li>อีเมล: 66160113@gmail.com</li>
-                    <li>โทร: 0800463117</li>
-                  </ul>
+                    <h3>ติดต่อ</h3>
+                    <ul>
+                        <li>อีเมล: 66160113@gmail.com</li>
+                        <li>โทร: 0800463117</li>
+                    </ul>
                 </div>
                 <div class="col-md-3">
-                  <h3>ติดตามเรา</h3>
-                  <div class="socials">
-                    <a href="#">Twitter</a>
-                    <a href="#">Facebook</a>
-                    <a href="#">Instagram</a>
-                  </div>
+                    <h3>ติดตามเรา</h3>
+                    <div class="socials">
+                        <a href="#">Twitter</a>
+                        <a href="#">Facebook</a>
+                        <a href="#">Instagram</a>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
