--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    <main>
+    <main class="mt-5">
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -91,11 +91,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
+                    <img src="image/สถานที่เที่ยวใน ชลบุรี.png" class="d-block w-100" alt="..."
+                        style="height: 600px; object-fit: fill;">
+                    <div class="carousel-caption d-none d-md-block"></div>
+                </div>
+                <div class="carousel-item">
                     <img src="https://placehold.co/600x600" class="d-block w-100" alt="..."
                         style="height: 500px; object-fit: cover;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
