--- a/index.html
+++ b/index.html
@@ -96,27 +96,27 @@
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://placehold.co/600x600" class="d-block w-100" alt="..."
-                        style="height: 500px; object-fit: cover;">
+                    <img src="image/jeen.png" class="d-block w-100" alt="..."
+                        style="height: 600px; object-fit: cover;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>ตลาดจีนโบราณชากแง้ว</h5>
+                        <p>อำเภอบางละมุง</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://placehold.co/600x600" class="d-block w-100" alt="..."
-                        style="height: 500px; object-fit: cover;">
+                    <img src="image/sichang.png" class="d-block w-100" alt="..."
+                        style="height: 600px; object-fit: cover;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>เกาะสีชัง</h5>
+                        <p>อำเภอศรีราชา</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://placehold.co/600x600" class="d-block w-100" alt="..."
-                        style="height: 500px; object-fit: cover;">
+                    <img src="image/numsai.png" class="d-block w-100" alt="..."
+                        style="height: 600px; object-fit: cover;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>หาดน้ำใส</h5>
+                        <p>อำเภอสัตหีบ</p>
                     </div>
                 </div>
             </div>
