--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Mitr:wght@200;300;400;500;600;700&family=Noto+Sans+Thai:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Mitr:wght@200;300;400;500;600;700&family=Noto+Sans+Thai:wght@100..900&display=swap"
+        rel="stylesheet">
     <style>
-        body{
-            font-family: 'Noto Sans Thai',sans-serif;
+        body {
+            font-family: 'Noto Sans Thai', sans-serif;
         }
     </style>
 </head>
@@ -96,8 +98,7 @@
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="image/jeen.png" class="d-block w-100" alt="..."
-                        style="height: 600px; object-fit: cover;">
+                    <img src="image/jeen.png" class="d-block w-100" alt="..." style="height: 600px; object-fit: cover;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>ตลาดจีนโบราณชากแง้ว</h5>
                         <p>อำเภอบางละมุง</p>
@@ -210,31 +211,41 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <img src="image/zoo.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
+                            <p class="card-text">สวนสัตว์เปิดเขาเขียว ตั้งอยู่ที่ตำบลบางพระ อำเภอศรีราชา จังหวัดชลบุรี
+                                เปิดให้บริการทุกวัน ตั้งแต่ 8 โมงเช้าถึง 6 โมงเย็น ราคาเข้าชม ผู้ใหญ่ 150 บาท เด็ก 30
+                                บาท ส่วนผู้สูงอายุ 60 ปีขึ้นไปเข้าชมฟรีค่ะ
+                                ... ในสวนสัตว์ มีจุดให้เที่ยวชมหลายโซน
+                                สามารถนำรถเข้าไปชมได้เลยหรือถ้าใครไม่มีรถมาก็สามารถเช่ารถได้
+                                โซนที่จะได้รับความสนใจมากที่สุดน่าจะเป็นสวนนกเพนกวิน
+                                ซึ่งเปิดให้เด็กๆขึ้นไปถ่ายรูปด้วยได้ค่ะ และยังมีสวนละมั่ง
+                                ที่เราสามารถเข้าไปป้อนอาหารถ่ายรูปได้แบบใกล้ชิด หรือจะเป็นกรงนกขนาดใหญ่
+                                ที่เราสามารถเข้าไปเดินเล่น และดูนกได้อย่างใกล้ชิด เรียกว่า 1 วัน
+                                สามารถอยู่ได้ทั้งวันโดยไม่เบื่อเลย อ่านต่อได้ที่</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <img src="image/Bangsaen-Aquarium.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
+                            <p class="card-text">สำหรับใครที่กำลังมองหาสถานที่แฮงค์เอาท์ใกล้ๆ กรุงเทพฯ กันอยู่
+                                เอาแบบไม่ต้องเสียเวลาเดินทางมาก แต่สวยงามประทับใจ Sanook Travel จะพาคุณไปเที่ยวกันที่
+                                อควาเรียมบางแสน พิพิธภัณฑ์สัตว์น้ำ บางแสน หรือ สถาบันวิทยาศาสตร์ทางทะเล มหาวิทยาลัยบูรพา
+                                นั่นเอง</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://placehold.co/400x200" class="card-img-top" alt="...">
+                        <img src="image/nongnuch.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
+                            <p class="card-text">สวนนงนุชพฤกษศาสตร์ สวนที่สวนติดอันดับโลก
+                                แถมยังเป็นแหล่งรวมหุบเขาไดโนเสาร์ที่สวนและใหญ่ที่สุด
+                                เป็นแหล่งท่อเที่ยวของพัทยาที่มีนักท่องเที่ยวทั้งชาวไทยและชาวต่างชาตินิมยมมาท่องเที่ยวเพื่อชมความสวยงามของต้นไม้และพื้นที่ด้านในก็สามารถรองรับนักท่องเที่ยวได้มากมาย
+                                แถมยังเป็นสถานที่ท่องเที่ยวที่ไม่ไกลกรุงเทพมากนัก ขับรถเพียง 2-3 ชั่วโมงก็ถึงเลย
+                            </p>
                         </div>
                     </div>
                 </div>
