--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-    <header data-bs-theme="dark">
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
+    <header>
+        <nav class="navbar navbar-expand-md fixed-top bg-info">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="image/logo.png" alt="" style="width: 100px; height: 40px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
